apps/claim-machinery-api/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${CLAIM_MACHINERY_API_NAMESPACE:-claim-machinery}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
